@@ -1,0 +1,5 @@
+Testname: control-file-gobject-instrospection-package-missing-gir-depends
+Version: 1.0
+Description: Check for missing binary dependencies on ${gir:Depends}
+Test-For:
+ gobject-instrospection-package-missing-depends-on-gir-depends
